--- a/index.html
+++ b/index.html
@@ -416,15 +416,116 @@
             </li>
           </ul>
         </div>
+        <div class="footer-subscribe">
+          <p class="social-footer">Subscribe</p>
+          <form class="footer-form">
+            <label
+              for="footer-email"
+              aria-label="footer email"
+              class="footer-label"
+            >
+              <input
+                type="email"
+                name="footer-email"
+                id="footer-email"
+                placeholder="E-mail"
+                class="footer-input"
+              />
+            </label>
+            <button type="submit" class="footer-btn">
+              Subscribe
+              <svg class="footer-btn-telegram" width="24" height="24">
+                <use href="./images/icons.svg#icon-telegram"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
+
     <div class="backdrop is-hidden" data-modal>
-      <div class="modal">
+      <div class="modal modal-container">
         <button type="button" class="modal-button" data-modal-close>
           <svg class="modal-button-svg" width="8" height="8">
             <use href="./images/modal.svg#icon-modal"></use>
           </svg>
         </button>
+        <p class="modal-title">Leave your contacts and we will call you back</p>
+        <form class="modal-form">
+          <div class="modal-item">
+            <label class="modal-name" for="user-name">Name</label>
+            <div class="modal-box">
+              <input
+                type="text"
+                class="modal-input"
+                id="user-name"
+                name="user-name"
+              />
+              <svg class="username-icon" width="18" height="24">
+                <use href="./images/icons.svg#person"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-item">
+            <label class="modal-name" for="phone">Phone</label>
+            <div class="modal-box">
+              <input
+                type="tel"
+                class="modal-input"
+                id="phone"
+                name="user-tel"
+              />
+              <svg class="username-icon" width="18" height="24">
+                <use href="./images/icons.svg#phone"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-item">
+            <label class="modal-name" for="email">Email</label>
+            <div class="modal-box">
+              <input
+                type="email"
+                class="modal-input"
+                id="email"
+                name="user-email"
+              />
+              <svg class="username-icon" width="18" height="24">
+                <use href="./images/icons.svg#email"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="textarea-box">
+            <label class="modal-name" for="user-comment">Comment</label>
+            <textarea
+              id="user-comment"
+              class="modal-textarea"
+              placeholder="Text input"
+              name="user-comment"
+            ></textarea>
+          </div>
+          <div class="checkbox-box">
+            <input
+              class="privacy-checkbox visually-hidden"
+              id="user-privacy"
+              type="checkbox"
+              name="user-privacy"
+              value="true"
+            />
+            <label class="privacy-label" for="user-privacy">
+              <span class="checkbox-box-svg">
+                <svg class="checkbox-svg" width="10" height="8">
+                  <use href="./images/icons.svg#icon-check"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the<a
+                href="#"
+                class="privacy-link link"
+                >Privacy Policy</a
+              >
+            </label>
+          </div>
+          <button class="modal-btn" type="submit">Send</button>
+        </form>
       </div>
     </div>
     <script src="./js/modal.js"></script>
