--- a/portfolio.html
+++ b/portfolio.html
@@ -315,6 +315,30 @@
             </li>
           </ul>
         </div>
+        <div class="footer-subscribe">
+          <p class="social-footer">Subscribe</p>
+          <form class="footer-form">
+            <label
+              for="footer-email"
+              aria-label="footer email"
+              class="footer-label"
+            >
+              <input
+                type="email"
+                name="footer-email"
+                id="footer-email"
+                placeholder="E-mail"
+                class="footer-input"
+              />
+            </label>
+            <button type="submit" class="footer-btn">
+              Subscribe
+              <svg class="footer-btn-telegram" width="24" height="24">
+                <use href="./images/icons.svg#icon-telegram"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
